--- a/Mikiri/assets/scss/_index.scss
+++ b/Mikiri/assets/scss/_index.scss
@@ -1,30 +1,196 @@
-.container {
-    margin: 0 auto;
-    min-height: 100vh;
+.DeusEx{
+    background: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #f4ab42;
+    text-align: center;
+    padding: 50px 0;
+}
+.DeusEx svg{
+    padding: 50px 0;
+    height: 500px;
+    width: 100%;
+}
+.DeusEx path{ 
+    transition: 3s;     
+}
+.DeusExx{
+    transform: translateX(-2500px);
+    /* transform: scale(3) translate(-500px); */
+    opacity: 0;
+}
+.DeusEx div{
+    margin: auto 0;
+    padding: 10px;
+}
+.DeusEx a{
+    border: 1px solid #f4ab42;
+    background: transparent;
+    color: #f4ab42;
+    border-radius: 1rem;
+    font-size: 15px;
+    padding: 10px;
+    text-decoration: none;
+}
+@media(min-width: 768px){
+    .DeusEx{
+        flex-direction: row;
+    }
+    .DeusEx div{
+        width: 100%;
+    }
+}
+/**/
+.AboutUs{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding: 50px 0;
+    background: #520428;
+    color: #f4f4f4;
+}
+.AboutUs button{
+    background: #520428;
+    border: 2px solid #848bee;
+    border-radius: 0.5rem;
+    margin: auto;
+    font-size: 20px;
+    color: whitesmoke;
+}
+/*Карточки*/
+.block{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    position: relative;
+}
+.block img{
+    width: 100%;
+    height: 100%; 
+}
+.block__content{
+    position: absolute;
+    background: linear-gradient(45deg, rgba(47, 42, 78, .8), rgba(80, 63, 118, .1));
+    padding: 10px;
+    width: 100%;
+}
+.block__content h1{
+    font-size: 20px;
+}
+.block__content p{
+    display: none;
+}
+/**/
+
+/**/
+.logo{
+    align-items: center;
     display: flex;
     justify-content: center;
-    align-items: center;
     text-align: center;
-  }
-  
-  .title {
-    font-family: 'Quicksand', 'Source Sans Pro', -apple-system, BlinkMacSystemFont,
-      'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-    display: block;
-    font-weight: 300;
-    font-size: 100px;
-    color: #35495e;
-    letter-spacing: 1px;
-  }
-  
-  .subtitle {
-    font-weight: 300;
-    font-size: 42px;
-    color: #526488;
-    word-spacing: 5px;
-    padding-bottom: 15px;
-  }
-  
-  .links {
-    padding-top: 15px;
-  }
+    // padding: 10px;
+}
+.logo__text{
+    position:absolute;
+    margin: 0;
+    font-size: 35px;
+}
+.outside{
+    display: inline-block;
+    position: relative;
+    font-size: 200px;
+    color: #670a35;
+    margin: 0;
+}
+/**/
+
+.Work{
+    background: linear-gradient(45deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(/dist/back3.jpg);
+    background-size: cover;
+    background-position: 100% 100%;
+    color: #f4f4f4;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+.Work__block{
+    display: flex;
+    flex-direction: column;
+}
+.Work__psiblock{
+    width: 100%;
+    margin: 15px 0;
+}
+.Work .logo p {
+    color: #291616;
+}
+
+@media(min-width: 768px){
+    .Work__block{
+        flex-direction: row;
+    }
+}
+/**/
+.Table{
+    padding: 20px;
+    background: #520428;
+    color: white;
+}
+.Table form{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+.Table__info{
+    display: flex;
+    flex-direction:column;
+}
+input{
+    background: transparent;
+    border: 1px solid #ffffff;
+    color: #f3f3f3;
+    font-size: 20px;
+    padding: 10px;
+    margin: 10px 15px;
+}
+.Table textarea{
+    background: transparent;
+    border: 1px solid #ffffff;
+    color: #f3f3f3;
+    font-size: 20px;
+    padding: 10px;
+    margin: 10px 15px;
+    resize: none;
+    height: 150px;
+}
+.Table__button button{
+    background: #3b8daf;
+    border: none;
+    color: #f3f3f3;
+    font-size: 20px;
+    padding:10px 50px;
+    margin: 10px 15px;
+}
+@media (min-width: 768px){
+    .Table__info{
+        flex-direction:row;
+    }
+    input{
+        width:100%; 
+    }
+}
+/**/
+footer{
+    background: black;
+    display: flex;
+    justify-content: space-between;
+    color:#ffffff;
+    font-size: 15px;
+    padding: 10px;
+}
+footer i{
+    margin: auto 0;
+    font-size: 25px;
+    padding: 15px;
+}
