--- a/Mikiri/assets/scss/app.scss
+++ b/Mikiri/assets/scss/app.scss
@@ -1,1 +1,15 @@
+/*Fonts*/
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display|Roboto');
+
+/*Pages*/
 @import 'index';
+@import 'header';
+
+
+body{
+    display:  flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+}
