--- a/Mikiri/assets/scss/_header.scss
+++ b/Mikiri/assets/scss/_header.scss
@@ -3,12 +3,23 @@ header{
     flex-direction: row;
     font-size: 15px;
     padding: 30px 0 0;
-    position: absolute;
+    position: absolute !important;
     justify-content: space-between;
     left: 0;
     right: 0;
     color: #f4ab42;
     align-items: center;
+    .logo{
+        justify-content: flex-start;
+        a{
+            color: #f4ab42;
+            text-decoration: none;
+        }
+    }
+    .menu__link{
+        display: flex;
+        justify-content: flex-end;
+    }
 }
 .logo{
     font-size: 30px;
