--- a/Mikiri/assets/scss/_index.scss
+++ b/Mikiri/assets/scss/_index.scss
@@ -54,7 +54,7 @@
 .twoFace{
     display: flex;
     img{
-        height: 59vh;
+        max-height: 59vh;
         transition: 1s;
         box-shadow: 0 0 10px rgba(0,0,0,0.5);
     }
@@ -74,23 +74,27 @@
       }
 }
 .index__psychology{
+    align-items: center;
+    height: 100vh;
+    div{
+        perspective: 200px;
+    }
     img{
-        animation: psyc 2s infinite alternate;
+        max-width: 450px;
+        width: 100%;
+        animation: psyc 8s infinite alternate;
         @keyframes psyc {
             0%{
-                transform: rotateY(0deg);
+                transform: rotateY(10deg);
             }
-            25%{
-                transform: rotateY(-30deg);
-            }
-            50%{
-                transform: rotateY(0deg);
-            }
-            75%{
-                transform: rotateY(30deg);
-            }
+            // 1%{
+            //     transform: rotateY(10deg);
+            // }
+            // 99%{
+            //     transform: rotateY(-15deg);
+            // }
             100%{
-                transform: rotateY(30deg);
+                transform: rotateY(-15deg);
             }
         }
     }
