--- a/Mikiri/assets/scss/_psychology.scss
+++ b/Mikiri/assets/scss/_psychology.scss
@@ -1,13 +1,11 @@
 .index__psychology{
     align-items: center;
     height: 100vh;
-    div{
-        perspective: 200px;
-    }
     img{
+        padding: 40px 0;
         max-width: 450px;
         width: 100%;
-        animation: psyc 8s infinite alternate ease-in-out;
+        animation: 8s infinite alternate ease-in-out psyc;
         @keyframes psyc {
             0%{
                 transform: rotateY(10deg);
@@ -24,16 +22,46 @@
         }
     }
 }
+.index__psychology__body{
+    display: flex;
+    flex-direction: column;
+    border: 2px solid black;
+    width: 70%;
+    align-items: center;
+    overflow-y: auto;
+}
+.index__psychology__body::-webkit-scrollbar-thumb { height: 50px; background-color: #666; border-radius: 3px;}
+.index__psychology__body::-webkit-scrollbar-track-piece { background-color: transparent;}
+.index__psychology__body::-webkit-scrollbar-corner { background-color: #999;}
+.index__psychology__body::-webkit-scrollbar-track {  background-color: #999;}
+.index__psychology__body::-webkit-scrollbar { width: 3px; height: 3px;}
+.index__psychology__body::-webkit-scrollbar-button {display: none;}
+.index__psychology__body__text{
+    width: 100%;
+    h3{
+        text-align: center;
+        padding: 20px 10%;
+    }
+    p{
+        padding: 0 10%;
+        padding-bottom: 10px;
+    }
+}
 .index__psychology__table{
-    border: 1px solid black;
+    height: 80%;
     display: flex;
     flex-direction: row;
 }
 .index__psychology__toggle{
     display: flex;
     flex-direction: column;
+    width: 30%;
+    border: 2px solid black;
     a{
-        padding: 10px;
-        background: blueviolet;
+        padding: 20px 15px;
+        transition: 0.3s;
+    }
+    a:hover{
+        background: black;
     }
 }
